--- a/public/html/login.html
+++ b/public/html/login.html
@@ -108,12 +108,12 @@
     <div class="center">
       <div class="card">
         <div class="logo">🔐</div>
-        <h1>登录到临时邮箱</h1>
+        <h1>TEMP EMAIL</h1>
         <div id="err" class="err"></div>
         <input id="username" class="input" type="text" placeholder="用户名/邮箱" />
         <input id="pwd" class="input" type="password" placeholder="密码" />
         <div style="font-size:12px;color:#64748b;margin-bottom:8px">
-          账号：guest，密码： admin，将进入观看模式。
+         
         </div>
         <button id="login" class="btn">登录</button>
       </div>
